--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -1,3 +1,347 @@
 .pint-glass-liquid {
 	mix-blend-mode: multiply;
 }
+
+@import url(http://fonts.googleapis.com/css?family=Lato:700,900);
+
+body { background-color: #0e83cd }
+
+.pour {
+    position: absolute;
+    left: 50%;
+    width: 20px;
+    height: 0px;
+    background-color: #edaf32;
+    border-radius: 0 0 10px 10px;
+}
+
+.beer-field .type1 {
+    background-color:  rgb(250, 250, 83);
+    border-color:  rgb(250, 250, 83);
+}
+
+.beer-field .type2 {
+    background-color: rgb(112, 62, 36);
+    border-color: rgb(112, 62, 36);
+}
+
+.beer-field .type3 {
+    background-color:  rgb(192, 112, 56);
+    border-color: rgb(192, 112, 56);
+}
+
+.beaker{
+    border: 10px solid #FFF;
+    border-top: 0;
+    border-radius: 0 0 30px 30px;
+    height: 40%;
+    position:absolute;
+    bottom: 155px;
+    width: 80%;
+    margin: 0 10%;
+
+}
+
+.liquid {
+    background-color: #edaf32;
+    border: 10px solid #edaf32;
+    border-radius: 0 0 20px 20px;
+
+    bottom: 0;
+    height: 0;
+    overflow: hidden;
+    width: calc(100% - 19px);
+    position: absolute;
+}
+.liquid > div {
+    position: absolute;
+}
+
+.liquid:after {
+    background-color: rgba(255, 255, 255, 0.25);
+    bottom: -10px;
+    content: '';
+    height: 200px;
+    left: -40px;
+    position: absolute;
+    transform: rotate(30deg);
+    -webkit-transform: rotate(15deg);
+    width: 10%;
+}
+
+.liquid .bubble {
+    -webkit-animation-name: bubble;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    background-color: rgba(255, 255, 255, 0.2);
+    bottom: 0;
+    border-radius: 10px;
+    height: 10%;
+    width: 10%;
+}
+
+.liquid .foam {
+    background-image: url(../../public/stylesheets/1.png);
+    width: 200px;
+    height: 100px;
+}
+
+@-webkit-keyframes bubble {
+    0% { bottom: 0; }
+
+    50% {
+        background-color: rgba(255, 255, 255, 0.2);
+        bottom: 80px;
+    }
+
+    100% {
+        background-color: rgba(255, 255, 255, 0);
+        bottom: 160px;
+    }
+}
+
+.bubble1 {
+    left: 10px;
+    -webkit-animation-delay: 1000ms;
+    -webkit-animation-duration: 1000ms;
+}
+
+.bubble2 {
+    left: 50px;
+    -webkit-animation-delay: 700ms;
+    -webkit-animation-duration: 1100ms;
+}
+
+.bubble3 {
+    left: 100px;
+    -webkit-animation-delay: 1200ms;
+    -webkit-animation-duration: 1300ms;
+}
+
+.bubble4 {
+    left: 130px;
+    -webkit-animation-delay: 1100ms;
+    -webkit-animation-duration: 700ms;
+}
+
+.bubble5 {
+    left: 170px;
+    -webkit-animation-delay: 1300ms;
+    -webkit-animation-duration: 800ms;
+}
+
+/* Foam */
+
+.beer-foam {
+    position: absolute;
+    bottom: 10px;
+}
+
+.foam-1, .foam-2, .foam-3, .foam-4,
+.foam-5, .foam-6, .foam-7 {
+    float: left;
+    position: absolute;
+    z-index: 999;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: #fefefe;
+}
+.foam-1 {
+    top: -30px;
+    left: -10px;
+}
+.foam-2 {
+    top: -35px;
+    left: 20px;
+}
+.foam-3 {
+    top: -30px;
+    left: 50px;
+}
+.foam-4 {
+    top: -35px;
+    left: 80px;
+}
+.foam-5 {
+    top: -30px;
+    left: 120px;
+}
+.foam-6 {
+    top: -20px;
+    left: 140px;
+}
+.foam-7 {
+    top: -30px;
+    left: 160px;
+}
+
+/* Drunk Text */
+
+.animated {
+    -webkit-animation-fill-mode:both;
+    -moz-animation-fill-mode:both;
+    animation-fill-mode:both;
+
+    -webkit-animation-duration:5s;
+    -moz-animation-duration:5s;
+    animation-duration:5s;
+
+    -webkit-animation-delay:3.5s;
+    -moz-animation-delay:3.5s;
+    animation-delay:3.5s;
+}
+
+
+.animated.drunk {
+    -webkit-animation-duration:2s;
+    -moz-animation-duration:2s;
+    animation-duration:2s;
+}
+
+@-webkit-keyframes drunk {
+    0% {
+        -webkit-transform: rotate(0);
+        -webkit-transform-origin: top left;
+        -webkit-animation-timing-function: ease-in-out;
+    }
+
+    20%, 60% {
+        -webkit-transform: rotate(80deg);
+        -webkit-transform-origin: top left;
+        -webkit-animation-timing-function: ease-in-out;
+    }
+    40% {
+        -webkit-transform: rotate(60deg);
+        -webkit-transform-origin: top left;
+        -webkit-animation-timing-function: ease-in-out;
+    }
+
+    80% {
+        -webkit-transform: rotate(60deg) translateY(0);
+        -webkit-transform-origin: top left;
+        -webkit-animation-timing-function: ease-in-out;
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: translateY(700px);
+        opacity: 0;
+    }
+}
+
+@-moz-keyframes drunk {
+    0% {
+        -moz-transform: rotate(0);
+        -moz-transform-origin: top left;
+        -moz-animation-timing-function: ease-in-out;
+    }
+
+    20%, 60% {
+        -moz-transform: rotate(80deg);
+        -moz-transform-origin: top left;
+        -moz-animation-timing-function: ease-in-out;
+    }
+
+    40% {
+        -moz-transform: rotate(60deg);
+        -moz-transform-origin: top left;
+        -moz-animation-timing-function: ease-in-out;
+    }
+
+    80% {
+        -moz-transform: rotate(60deg) translateY(0); opacity: 1;
+        -moz-transform-origin: top left;
+        -moz-animation-timing-function: ease-in-out;
+    }
+
+    100% {
+        -moz-transform: translateY(700px);
+        opacity: 0;
+    }
+}
+
+@keyframes drunk {
+    0% {
+        transform: rotate(0);
+        transform-origin: top left;
+        animation-timing-function: ease-in-out;
+    }
+
+    20%, 60% {
+        transform: rotate(80deg);
+        transform-origin: top left;
+        animation-timing-function: ease-in-out;
+    }
+
+    40% {
+        transform: rotate(60deg);
+        transform-origin: top left;
+        animation-timing-function: ease-in-out;
+    }
+
+    80% {
+        transform: rotate(60deg) translateY(0);
+        opacity: 1; transform-origin: top left;
+        animation-timing-function: ease-in-out;
+    }
+    100% {
+        transform: translateY(700px);
+        opacity: 0;
+    }
+}
+
+.drunk {
+    -webkit-animation-name: drunk;
+    -moz-animation-name: drunk;
+    animation-name: drunk;
+}
+
+.topHeader {
+    color: white;
+    margin: 30px auto;
+    position: fixed;
+    font-size: 2em;
+    font-weight: bold;
+    z-index: 999;
+    text-align: center;
+    width: 100%;
+}
+.beer-field {
+    box-sizing: border-box;
+    display: inline-table;
+    position: relative;
+    height: 490px;
+    top: -20px;
+    width: 20%;
+    max-width: 200px;
+}
+
+.beerDescription {
+    position: absolute;
+    bottom: 0;
+    margin: 0 10%;
+    color: white;
+}
+.beerSection {
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 500px;
+    width: 1100px;
+}
+
+@media (max-width: 480px) {
+    .beer-field {
+        height: 320px;
+    }
+}
+
+@media (max-width: 1900px) and (min-width:1200px) {
+    .beerSection {
+        width: 1900px;
+    }
+    .beer-field {
+        /*width: 20%;*/
+    }
+}
