--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -1,33 +1,8 @@
-.pint-glass-liquid {
-	mix-blend-mode: multiply;
-}
-
 @import url(http://fonts.googleapis.com/css?family=Lato:700,900);
 
-body { background-color: #0e83cd }
-
-.pour {
-    position: absolute;
-    left: 50%;
-    width: 20px;
-    height: 0px;
-    background-color: #edaf32;
-    border-radius: 0 0 10px 10px;
-}
-
-.beer-field .type1 {
-    background-color:  rgb(250, 250, 83);
-    border-color:  rgb(250, 250, 83);
-}
-
-.beer-field .type2 {
-    background-color: rgb(112, 62, 36);
-    border-color: rgb(112, 62, 36);
-}
-
-.beer-field .type3 {
-    background-color:  rgb(192, 112, 56);
-    border-color: rgb(192, 112, 56);
+body { 
+  background-color: #0e83cd;
+  margin: 0;
 }
 
 .beaker{
@@ -35,24 +10,54 @@ body { background-color: #0e83cd }
     border-top: 0;
     border-radius: 0 0 30px 30px;
     height: 40%;
-    position:absolute;
+    position: absolute;
     bottom: 155px;
     width: 80%;
     margin: 0 10%;
+}
 
+/*  TODO: Remove this class*/
+.beer-field .type1 {
+    background-color:  #a75b36;
+    border-color:  #a75b36;
+}
+
+.beer-field {
+    box-sizing: border-box;
+    display: inline-table;
+    position: relative;
+    height: 490px;
+    top: -20px;
+    width: 20%;
+    max-width: 200px;
+}
+
+.beerDescription {
+    position: absolute;
+    bottom: 0;
+    margin: 0 10%;
+    color: white;
+}
+
+.beerSection {
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 500px;
+    width: 1100px;
 }
 
 .liquid {
     background-color: #edaf32;
     border: 10px solid #edaf32;
     border-radius: 0 0 20px 20px;
-
     bottom: 0;
     height: 0;
     overflow: hidden;
     width: calc(100% - 19px);
     position: absolute;
 }
+
 .liquid > div {
     position: absolute;
 }
@@ -62,11 +67,11 @@ body { background-color: #0e83cd }
     bottom: -10px;
     content: '';
     height: 200px;
-    left: -40px;
+    left: -15px;
     position: absolute;
     transform: rotate(30deg);
     -webkit-transform: rotate(15deg);
-    width: 10%;
+    width: 50px;
 }
 
 .liquid .bubble {
@@ -80,10 +85,24 @@ body { background-color: #0e83cd }
     width: 10%;
 }
 
-.liquid .foam {
-    background-image: url(../../public/stylesheets/1.png);
-    width: 200px;
-    height: 100px;
+.pour {
+    position: absolute;
+    left: 50%;
+    width: 20px;
+    height: 0px;
+    background-color: #edaf32;
+    border-radius: 0 0 10px 10px;
+}
+
+.topHeader {
+    color: white;
+    margin: 30px auto;
+    position: fixed;
+    font-size: 2em;
+    font-weight: bold;
+    z-index: 999;
+    text-align: center;
+    width: 100%;
 }
 
 @-webkit-keyframes bubble {
@@ -167,169 +186,7 @@ body { background-color: #0e83cd }
     top: -30px;
     left: 120px;
 }
-.foam-6 {
-    top: -20px;
-    left: 140px;
-}
-.foam-7 {
-    top: -30px;
-    left: 160px;
-}
 
-/* Drunk Text */
-
-.animated {
-    -webkit-animation-fill-mode:both;
-    -moz-animation-fill-mode:both;
-    animation-fill-mode:both;
-
-    -webkit-animation-duration:5s;
-    -moz-animation-duration:5s;
-    animation-duration:5s;
-
-    -webkit-animation-delay:3.5s;
-    -moz-animation-delay:3.5s;
-    animation-delay:3.5s;
-}
-
-
-.animated.drunk {
-    -webkit-animation-duration:2s;
-    -moz-animation-duration:2s;
-    animation-duration:2s;
-}
-
-@-webkit-keyframes drunk {
-    0% {
-        -webkit-transform: rotate(0);
-        -webkit-transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-    }
-
-    20%, 60% {
-        -webkit-transform: rotate(80deg);
-        -webkit-transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-    }
-    40% {
-        -webkit-transform: rotate(60deg);
-        -webkit-transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-    }
-
-    80% {
-        -webkit-transform: rotate(60deg) translateY(0);
-        -webkit-transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: translateY(700px);
-        opacity: 0;
-    }
-}
-
-@-moz-keyframes drunk {
-    0% {
-        -moz-transform: rotate(0);
-        -moz-transform-origin: top left;
-        -moz-animation-timing-function: ease-in-out;
-    }
-
-    20%, 60% {
-        -moz-transform: rotate(80deg);
-        -moz-transform-origin: top left;
-        -moz-animation-timing-function: ease-in-out;
-    }
-
-    40% {
-        -moz-transform: rotate(60deg);
-        -moz-transform-origin: top left;
-        -moz-animation-timing-function: ease-in-out;
-    }
-
-    80% {
-        -moz-transform: rotate(60deg) translateY(0); opacity: 1;
-        -moz-transform-origin: top left;
-        -moz-animation-timing-function: ease-in-out;
-    }
-
-    100% {
-        -moz-transform: translateY(700px);
-        opacity: 0;
-    }
-}
-
-@keyframes drunk {
-    0% {
-        transform: rotate(0);
-        transform-origin: top left;
-        animation-timing-function: ease-in-out;
-    }
-
-    20%, 60% {
-        transform: rotate(80deg);
-        transform-origin: top left;
-        animation-timing-function: ease-in-out;
-    }
-
-    40% {
-        transform: rotate(60deg);
-        transform-origin: top left;
-        animation-timing-function: ease-in-out;
-    }
-
-    80% {
-        transform: rotate(60deg) translateY(0);
-        opacity: 1; transform-origin: top left;
-        animation-timing-function: ease-in-out;
-    }
-    100% {
-        transform: translateY(700px);
-        opacity: 0;
-    }
-}
-
-.drunk {
-    -webkit-animation-name: drunk;
-    -moz-animation-name: drunk;
-    animation-name: drunk;
-}
-
-.topHeader {
-    color: white;
-    margin: 30px auto;
-    position: fixed;
-    font-size: 2em;
-    font-weight: bold;
-    z-index: 999;
-    text-align: center;
-    width: 100%;
-}
-.beer-field {
-    box-sizing: border-box;
-    display: inline-table;
-    position: relative;
-    height: 490px;
-    top: -20px;
-    width: 20%;
-    max-width: 200px;
-}
-
-.beerDescription {
-    position: absolute;
-    bottom: 0;
-    margin: 0 10%;
-    color: white;
-}
-.beerSection {
-    position: relative;
-    overflow-x: auto;
-    overflow-y: hidden;
-    height: 500px;
-    width: 1100px;
-}
 
 @media (max-width: 480px) {
     .beer-field {
