rename relation breweries to brewery

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -1,5 +1,4 @@
 body { 
-  background-color: #0e83cd;
   margin: 0;
   font-family: 'Cabin Sketch', cursive;
   color: black;
@@ -12,8 +11,9 @@ body {
     border-radius: 0 0 30px 30px;
     height: 40%;
     position: absolute;
-    bottom: 155px;
+    bottom: 110px;
     width: 80%;
+    max-width: 230px;
     margin: 0 10%;
 }
 
@@ -27,11 +27,10 @@ body {
     box-sizing: border-box;
     display: inline-table;
     position: relative;
-    height: 490px;
+    height: 550px;
     top: -20px;
     width: calc(100%/6);
     min-width: 200px;
-    max-width: 200px;
 }
 
 .beerDescription {
@@ -44,8 +43,9 @@ body {
     position: relative;
     overflow-x: auto;
     overflow-y: hidden;
-    height: 100%;
+    height: 800px;
     width: 100%;
+    min-width: 1200px;
 }
 
 .liquid {
@@ -186,7 +186,6 @@ body {
     top: -30px;
     left: 120px;
 }
-
 
 @media (max-width: 480px) {
 
