--- a/client/src/partials/beers-menu.html
+++ b/client/src/partials/beers-menu.html
@@ -3,12 +3,13 @@
   <div class="beer-field" ng-repeat="keg in kegs">
     <div class="pour srm{{keg.beer.srm}}"></div>
     <div class="beaker">
-      <div class="beer-foam">
-<!--         <div class="foam-1"></div> -->
-<!--         <div class="foam-2"></div> -->
-<!--         <div class="foam-3"></div> -->
-<!--         <div class="foam-4"></div> -->
-<!--         <div class="foam-5"></div> -->
+      <div class="beer-foam" style="max-height:{{keg.volume}}%;">
+        <div class="foam-1"></div>
+        <div class="foam-2"></div>
+        <div class="foam-3"></div>
+        <div class="foam-4"></div>
+        <div class="foam-5"></div>
+        <div class="foam-6"></div>
       </div>
       <div class="liquid srm{{keg.beer.srm}}" style="max-height:{{keg.volume}}%">
         <div class="foam"></div>
