--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -76,8 +76,8 @@ body {
     background-color: rgba(255, 255, 255, 1);
     bottom: 0;
     border-radius: 10px;
-    height: 10%;
-    width: 10%;
+    height: 15px;
+    width: 15px;
 }
 
 .pour {
@@ -148,11 +148,11 @@ body {
 .beer-foam {
     position: absolute;
     bottom: 10px;
+    height: 10px;
 }
 
 .foam-1, .foam-2, .foam-3, .foam-4,
 .foam-5, .foam-6, .foam-7 {
-    float: left;
     position: absolute;
     z-index: 999;
     width: 50px;
@@ -179,6 +179,10 @@ body {
 .foam-5 {
     top: -30px;
     left: 120px;
+}
+.foam-6 {
+    top: -20px;
+    left: 150px;
 }
 
 @media (max-width: 480px) {
