--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -48,7 +48,7 @@ body {
     border-radius: 0 0 20px 20px;
     bottom: 0;
     height: 0;
-    overflow: hidden;
+    overflow: visiable;
     width: calc(100% - 19px);
     position: absolute;
 }
@@ -149,6 +149,8 @@ body {
     position: absolute;
     bottom: 10px;
     height: 10px;
+    width: 100%;
+  overflow: visible;
 }
 
 .foam-1, .foam-2, .foam-3, .foam-4,
