--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -153,17 +153,22 @@ body {
     padding-bottom: 30px;
 }
 
+.beer-volume {
+    display: none;
+    z-index: 999;
+}
+
 .foam-1, .foam-2, .foam-3, .foam-4,
 .foam-5, .foam-6, .foam-7 {
     position: absolute;
-    z-index: 999;
+    z-index: 998;
     width: 50px;
     height: 50px;
     border-radius: 30px;
     background-color: #fefefe;
 }
 .foam-1 {
-    top: 5px;
+    top: 10px;
     left: -10px;
 }
 .foam-2 {
@@ -185,6 +190,11 @@ body {
 .foam-6 {
     top: 10px;
     left: 150px;
+}
+.foam-7 {
+    display: none;
+    top: -30px;
+    left: 160px;
 }
 
 @media (max-width: 480px) {
