Add keg graph history

--- a/client/src/partials/beers-menu.html
+++ b/client/src/partials/beers-menu.html
@@ -33,6 +33,7 @@
       <div>Brewery: {{keg.beer.brewery.name}}</div>
       <div>Location: {{keg.beer.brewery.location}}</div>
       <div><a href="/#/kegs/{{keg.id}}">Read More</a></div>
+      <div><a href="/#/kegs/history/{{keg.tap}}">Usage Graph</a></div>
     </div>
     
   </div>
