--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -194,3 +194,15 @@ body {
 @media (max-width: 1900px) and (min-width:1200px) {
 
 }
+
+.chart-container {
+  border: 1px solid black;
+  box-sizing: border-box;
+  width: 100%;
+  height: 300px;
+}
+
+.keg-history {
+  margin: 50px;
+  padding: 10px;
+}
