--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -198,11 +198,11 @@ body {
 .chart-container {
   border: 1px solid black;
   box-sizing: border-box;
-  width: 100%;
   height: 300px;
+  padding: 0 10px;
+  width: 100%;
 }
 
 .keg-history {
   margin: 50px;
-  padding: 10px;
 }
