Add link to return to home page

--- a/client/src/partials/keg-history.html
+++ b/client/src/partials/keg-history.html
@@ -4,4 +4,5 @@
   <div class="chart-container">
     <linechart data="data" options="options" mode=""></linechart>
   </div>
+  <a href="/#">What's on tap?</a>
 </div>
