--- a/client/src/partials/beers-menu.html
+++ b/client/src/partials/beers-menu.html
@@ -1,4 +1,3 @@
-
 <div class="beerSection">
   <div class="beer-field" ng-repeat="keg in kegs">
     <div class="pour srm{{keg.beer.srm}}"></div>
@@ -41,3 +40,7 @@
 <header class="topHeader">
   Today we have 6 types of beer for you
 </header>
+<div class="beer-explenation">
+    <img src="../img/cap.png" class="beer-abv" />
+    <span>Alcohol by volume</span>
+</div>
