Added ABV and IBU links

--- a/client/src/partials/beers-menu.html
+++ b/client/src/partials/beers-menu.html
@@ -41,6 +41,7 @@
   Today we have 6 types of beer for you
 </header>
 <div class="beer-explenation">
-    <img src="../img/cap.png" class="beer-abv" />
-    <span>Alcohol by volume</span>
+    <a href="http://en.wikipedia.org/wiki/Alcohol_by_volume"><img src="../img/cap.png" class="beer-abv" /></a>
+    <a href="http://en.wikipedia.org/wiki/Beer_measurement#Bitterness"><img src="../img/cap-ibu.png" class="beer-ibu" /></a>
+
 </div>
