Dynemic beer count

--- a/client/src/partials/beers-menu.html
+++ b/client/src/partials/beers-menu.html
@@ -39,7 +39,7 @@
   </div>
 </div>
 <header class="topHeader">
-  Today we have 6 types of beer for you
+  Today we have {{kegs.length}} types of beer for you
 </header>
 <div class="beer-explenation">
     <a href="http://en.wikipedia.org/wiki/Alcohol_by_volume"><img src="../img/cap.png" class="beer-abv" /></a>
