Made beer name more visible

--- a/client/src/partials/beers-menu.html
+++ b/client/src/partials/beers-menu.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="beerDescription">
-      <div>Name: {{keg.beer.name}}</div>
+      <div class="beer-name">{{keg.beer.name}}</div>
       <!--<div>Brewery: {{keg.beer.description}}</div>-->
       <!--<div>Type: Pilsner</div>-->  <!-- e.g. style -->
       <!--                 <div>COLOR: {{keg.beer.srm}}</div> -->
