--- a/client/src/partials/beers-menu.html
+++ b/client/src/partials/beers-menu.html
@@ -1,6 +1,7 @@
 <div class="beerSection">
   <div class="beer-field" ng-repeat="keg in kegs">
     <div class="pour srm{{keg.beer.srm}}"></div>
+    <div class="tap-number">{{keg.tap}}</div>
     <div class="beaker">
       <div class="beer-foam" style="max-height:{{keg.volume}}%;">
         <div class="foam-1"></div>
@@ -20,22 +21,16 @@
         <div class="bubble bubble5"></div>
       </div>
     </div>
-    <div class="beerDescription">
+    <div class="beerDescription" ng-hide="keg.fakeKeg">
       <div class="beer-name">{{keg.beer.name}}</div>
-      <!--<div>Brewery: {{keg.beer.description}}</div>-->
-      <!--<div>Type: Pilsner</div>-->  <!-- e.g. style -->
-      <!--                 <div>COLOR: {{keg.beer.srm}}</div> -->
       <div>IBU: {{keg.beer.ubv}}</div>
       <div>ABV: {{keg.beer.abv}}</div>
-      <div>Tap: {{keg.tap}}</div>
-      <div>Current ML: {{keg.current_ml}}</div>
-      <div>Volume {{keg.volume}}%</div>
       <div>Brewery: {{keg.beer.brewery.name}}</div>
       <div>Location: {{keg.beer.brewery.location}}</div>
       <div><a href="/#/kegs/{{keg.id}}">Read More</a></div>
       <div><a href="/#/kegs/history/{{keg.tap}}">Usage Graph</a></div>
     </div>
-    
+
   </div>
 </div>
 <header class="topHeader">
