--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -1,4 +1,4 @@
-body { 
+body {
   margin: 0;
   font-family: 'Cabin Sketch', cursive;
   color: black;
@@ -12,6 +12,7 @@ body {
     height: 40%;
     position: absolute;
     bottom: 250px;
+    top: 130px;
     width: 80%;
     max-width: 230px;
     margin: 0 10%;
@@ -27,17 +28,25 @@ body {
     min-width: 200px;
 }
 
+.beer-field .tap-number {
+    font-size: 6em;
+    margin-bottom: 100px;
+    margin-left: 40px;
+}
+
 .beer-name {
     color: white;
     font-size: 2em;
     margin: 0 -10%;
     text-align: center;
+    font-size: 1.5em;
 }
 
 .beerDescription {
     position: absolute;
     top: 400px;
     margin: 0 10%;
+    font-size: 1.5em;
 }
 
 .beerSection {
@@ -56,7 +65,7 @@ body {
 
 .beer-abv,
 .beer-ibu {
-  width: 15%;  
+  width: 15%;
 }
 
 .liquid {
@@ -247,7 +256,7 @@ body {
 
 }
 @media (max-width:1200px) {
-  .foam-6 { 
+  .foam-6 {
       display: none;
   }
 }
