--- a/client/src/partials/admin/beer.html
+++ b/client/src/partials/admin/beer.html
@@ -17,7 +17,7 @@
       </div>
       <div class="form-group">
         <label>IBU</label>
-        <input class="form-control" ng-model="model.ubi">
+        <input class="form-control" ng-model="model.ibu">
       </div>
       <div class="form-group">
         <label>Description</label>
@@ -45,8 +45,8 @@
         </select>
       </div>
       <div class="panel">
-        <button type="button" class="btn btn-primary">Save</button>
-        <button type="button" class="btn btn-default" ng-click="window.history.back">Cancel</button>
+        <button type="button" class="btn btn-primary" ng-click="saveModel()">Save</button>
+        <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
       </div>  
     </form>
   </div>
